--- a/app/src/main/res/layout/fragment_print_view.xml
+++ b/app/src/main/res/layout/fragment_print_view.xml
@@ -7,7 +7,8 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        tools:ignore="UselessParent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -442,7 +443,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
-                    android:orientation="horizontal"/>
+                    android:orientation="horizontal" />
 
 
             </LinearLayout>
