--- a/app/src/main/res/layout/activity_add_job_order.xml
+++ b/app/src/main/res/layout/activity_add_job_order.xml
@@ -14,14 +14,15 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_above="@id/create_job_order">
+        android:layout_above="@id/create_job_order"
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            tools:ignore="UseCompoundDrawables">
 
             <ImageView
                 android:id="@+id/back"
@@ -54,9 +55,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:weightSum="5"
+            android:layout_marginTop="10dp"
             android:orientation="vertical"
-            android:layout_marginTop="10dp">
+            android:weightSum="5">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -69,13 +70,14 @@
                     android:layout_height="wrap_content"
                     android:text="@string/requests"
                     android:textColor="@color/gray"
-                    android:textSize="14sp"/>
+                    android:textSize="14sp" />
+
                 <ProgressBar
                     android:id="@+id/requests_loading"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
                     android:layout_gravity="center" />
+
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recycler_view_requests"
                     android:layout_width="match_parent"
@@ -84,25 +86,26 @@
                     tools:listitem="@layout/item_job_order_request" />
 
             </LinearLayout>
+
             <LinearLayout
+                android:id="@+id/extras_layout_container"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
+                android:layout_marginTop="5dp"
                 android:layout_weight="2"
-                android:orientation="vertical"
-                android:id="@+id/extras_layout_container"
-                android:layout_marginTop="5dp">
+                android:orientation="vertical">
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/extras"
                     android:textColor="@color/gray"
-                    android:textSize="14sp"/>
+                    android:textSize="14sp" />
 
                 <ProgressBar
                     android:id="@+id/extras_loading"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
                     android:layout_gravity="center" />
 
                 <androidx.recyclerview.widget.RecyclerView
@@ -118,11 +121,7 @@
         </LinearLayout>
 
 
-
     </LinearLayout>
-
-
-
 
 
     <Button
