--- a/app/src/main/res/layout/activity_comments.xml
+++ b/app/src/main/res/layout/activity_comments.xml
@@ -62,42 +62,42 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-        <EditText
-            android:id="@+id/et_comment"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_toStartOf="@+id/add_comment"
-            android:layout_toEndOf="@+id/add_attach"
-            android:background="@drawable/add_comment_bg"
-            android:hint="@string/add_comment"
-            android:imeOptions="actionDone"
-            android:importantForAutofill="no"
-            android:inputType="text"
-            android:padding="10dp"
-            android:textSize="18sp" />
+            <EditText
+                android:id="@+id/et_comment"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_toStartOf="@+id/add_comment"
+                android:layout_toEndOf="@+id/add_attach"
+                android:background="@drawable/add_comment_bg"
+                android:hint="@string/add_comment"
+                android:imeOptions="actionDone"
+                android:importantForAutofill="no"
+                android:inputType="text"
+                android:padding="10dp"
+                android:textSize="18sp" />
 
-        <ImageView
-            android:id="@+id/add_attach"
-            android:layout_width="35dp"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:adjustViewBounds="true"
-            android:contentDescription="@string/description"
-            android:padding="5dp"
-            android:src="@drawable/ic_attach_file"
-            app:tint="@color/colorAccent" />
+            <ImageView
+                android:id="@+id/add_attach"
+                android:layout_width="35dp"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:adjustViewBounds="true"
+                android:contentDescription="@string/description"
+                android:padding="5dp"
+                android:src="@drawable/ic_attach_file"
+                app:tint="@color/colorAccent" />
 
-        <ImageView
-            android:id="@+id/add_comment"
-            android:layout_width="35dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:adjustViewBounds="true"
-            android:contentDescription="@string/description"
-            android:padding="5dp"
-            android:src="@drawable/ic_send"
-            app:tint="@color/colorAccent" />
+            <ImageView
+                android:id="@+id/add_comment"
+                android:layout_width="35dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:adjustViewBounds="true"
+                android:contentDescription="@string/description"
+                android:padding="5dp"
+                android:src="@drawable/ic_send"
+                app:tint="@color/colorAccent" />
 
         </RelativeLayout>
 
@@ -106,14 +106,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/comm"
-            android:text="@string/no_file_choose"
             android:layout_marginStart="45dp"
-            android:visibility="gone"
+            android:text="@string/no_file_choose"
             android:textColor="@color/text_request_gray"
-            android:textSize="14sp"/>
+            android:textSize="14sp"
+            android:visibility="gone" />
 
     </RelativeLayout>
-
 
 
     <ProgressBar
