--- a/app/src/main/res/layout/activity_edit_job_order.xml
+++ b/app/src/main/res/layout/activity_edit_job_order.xml
@@ -10,17 +10,19 @@
     android:paddingTop="15dp"
     android:paddingEnd="15dp"
     tools:context=".job_orders.edit_job_order.EditJobOrderActivity">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_above="@id/submit">
+        android:layout_above="@id/submit"
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            tools:ignore="UseCompoundDrawables">
 
             <ImageView
                 android:id="@+id/back"
@@ -68,7 +70,6 @@
             tools:listitem="@layout/item_edit_job_order_request" />
 
     </LinearLayout>
-
 
 
     <ProgressBar
