--- a/app/src/main/res/layout/activity_extras_edit.xml
+++ b/app/src/main/res/layout/activity_extras_edit.xml
@@ -12,12 +12,12 @@
     tools:context=".requests.edit.Extras_edit">
 
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        tools:ignore="UseCompoundDrawables">
 
         <ImageView
             android:id="@+id/back"
@@ -143,7 +143,6 @@
                         android:inputType="text" />
 
                 </com.google.android.material.textfield.TextInputLayout>
-
 
 
                 <Button
