--- a/app/src/main/res/layout/activity_job_order_details.xml
+++ b/app/src/main/res/layout/activity_job_order_details.xml
@@ -245,32 +245,17 @@
                         android:layout_height="wrap_content">
 
 
-                        <LinearLayout
-                            android:layout_width="wrap_content"
+                        <TextView
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:orientation="horizontal"
+                            android:layout_marginStart="5dp"
+                            android:layout_toStartOf="@+id/download"
+                            android:gravity="center_vertical"
                             android:padding="10dp"
-                            tools:ignore="UseCompoundDrawables">
-
-                            <ImageView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:contentDescription="@string/description"
-                                android:src="@drawable/ic_pdf"
-                                android:text="@string/request_id"
-                                android:textColor="@color/black"
-                                android:textSize="16sp" />
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginStart="5dp"
-                                android:text="@string/job_order"
-                                android:textColor="@color/black"
-                                android:textSize="18sp" />
-
-                        </LinearLayout>
+                            android:text="@string/job_order"
+                            android:textColor="@color/black"
+                            android:textSize="18sp"
+                            app:drawableStartCompat="@drawable/ic_pdf" />
 
 
                         <TextView
@@ -279,8 +264,9 @@
                             android:layout_height="wrap_content"
                             android:layout_alignParentEnd="true"
                             android:layout_centerVertical="true"
-                            android:layout_marginStart="5dp"
+                            android:layout_marginStart="10dp"
                             android:layout_marginEnd="20dp"
+                            android:padding="10dp"
                             android:text="@string/preview"
                             android:textColor="@color/text_dark_blue"
                             android:textSize="18sp" />
@@ -358,13 +344,12 @@
                 </RelativeLayout>
 
 
-
                 <TextView
                     android:id="@+id/hany_notes"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    tools:text="hany notes"
-                    android:visibility="gone"/>
+                    android:visibility="gone"
+                    tools:text="hany notes" />
 
                 <TextView
                     android:id="@+id/reasons"
@@ -375,7 +360,7 @@
                     android:layout_marginEnd="20dp"
                     android:textColor="@color/red"
                     android:textSize="16sp"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold" />
 
 
                 <LinearLayout
@@ -413,28 +398,28 @@
                             android:id="@+id/adel_seen_layout"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="10dp"
-                            android:layout_alignParentEnd="true">
+                            android:layout_alignParentEnd="true"
+                            android:layout_marginStart="10dp">
 
-                        <TextView
-                            android:id="@+id/adel_seen_txt"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/seen_by_adel"
-                            android:textColor="@color/green"
-                            android:textSize="14sp"
-                            app:drawableStartCompat="@drawable/ic_seen"
-                            app:drawableTint="@color/green" />
+                            <TextView
+                                android:id="@+id/adel_seen_txt"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/seen_by_adel"
+                                android:textColor="@color/green"
+                                android:textSize="14sp"
+                                app:drawableStartCompat="@drawable/ic_seen"
+                                app:drawableTint="@color/green" />
 
-                        <TextView
-                            android:id="@+id/adel_unseen_txt"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/not_seen_by_adel"
-                            android:textColor="@color/red"
-                            android:textSize="14sp"
-                            app:drawableStartCompat="@drawable/ic_unseen"
-                            app:drawableTint="@color/red" />
+                            <TextView
+                                android:id="@+id/adel_unseen_txt"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/not_seen_by_adel"
+                                android:textColor="@color/red"
+                                android:textSize="14sp"
+                                app:drawableStartCompat="@drawable/ic_unseen"
+                                app:drawableTint="@color/red" />
                         </RelativeLayout>
                     </RelativeLayout>
 
@@ -471,7 +456,6 @@
         android:layout_gravity="center" />
 
 
-
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:id="@+id/btn_comments"
         android:layout_width="wrap_content"
@@ -481,11 +465,11 @@
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="20dp"
         android:contentDescription="@string/content_description"
-        app:backgroundTint="@color/gray"
         android:text="@string/comments"
-        android:textColor="@color/white"
         android:textAllCaps="false"
+        android:textColor="@color/white"
+        app:backgroundTint="@color/gray"
         app:icon="@drawable/ic_comments"
-        app:iconTint="@color/white"/>
+        app:iconTint="@color/white" />
 
 </RelativeLayout>
