--- a/app/src/main/res/layout/activity_job_orders.xml
+++ b/app/src/main/res/layout/activity_job_orders.xml
@@ -20,7 +20,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            tools:ignore="UseCompoundDrawables">
 
             <ImageView
                 android:id="@+id/back"
@@ -57,6 +58,7 @@
                 android:drawableTint="@color/black"
                 android:hint="@string/type_to_search"
                 android:imeOptions="actionSearch"
+                android:importantForAutofill="no"
                 android:inputType="text"
                 android:padding="8dp" />
 
@@ -68,6 +70,7 @@
                 android:layout_centerVertical="true"
                 android:layout_marginStart="5dp"
                 android:background="@drawable/black_curved"
+                android:contentDescription="@string/description"
                 android:padding="10dp"
                 android:src="@drawable/ic_filter" />
 
