--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -9,7 +9,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:textSize="32sp"
-    android:text="Test Notification open"
+    android:text="@string/test_notification_open"
     android:layout_centerInParent="true"
     android:gravity="center"/>
 
