--- a/app/src/main/res/layout/fragment_all_requests.xml
+++ b/app/src/main/res/layout/fragment_all_requests.xml
@@ -1,132 +1,122 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical"
-    android:paddingStart="15dp"
+    android:paddingHorizontal="15dp"
     android:paddingTop="15dp"
-    android:paddingEnd="15dp"
     tools:context=".home.all_requests.AllRequestsFragment">
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/project_name"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:background="@drawable/et_gray"
+        android:ellipsize="end"
+        android:maxLines="2"
+        android:padding="8dp"
+        android:text="@string/all_projects"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        app:drawableEndCompat="@drawable/ic_arrow_down" />
 
 
-
-            <TextView
-                android:id="@+id/project_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:maxLines="2"
-                android:text="@string/all_projects"
-                android:textColor="@color/black"
-                android:textSize="18sp"
-                android:padding="8dp"
-                android:background="@drawable/et_gray"
-                app:drawableEndCompat="@drawable/ic_arrow_down" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp">
 
 
-
-        <RelativeLayout
+        <EditText
+            android:id="@+id/search"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp">
+            android:layout_centerVertical="true"
+            android:layout_toStartOf="@+id/filter_btn"
+            android:background="@drawable/et_gray"
+            android:drawableEnd="@drawable/ic_search"
+            android:drawableTint="@color/black"
+            android:hint="@string/type_to_search"
+            android:imeOptions="actionSearch"
+            android:importantForAutofill="no"
+            android:inputType="text"
+            android:padding="8dp" />
 
-
-            <EditText
-                android:id="@+id/search"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_toStartOf="@+id/filter_btn"
-                android:background="@drawable/et_gray"
-                android:drawableEnd="@drawable/ic_search"
-                android:drawableTint="@color/black"
-                android:hint="@string/type_to_search"
-                android:imeOptions="actionSearch"
-                android:inputType="text"
-                android:padding="8dp" />
-
-            <ImageView
-                android:id="@+id/filter_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
-                android:layout_marginStart="5dp"
-                android:background="@drawable/black_curved"
-                android:contentDescription="@string/description"
-                android:padding="10dp"
-                android:src="@drawable/ic_filter" />
-        </RelativeLayout>
-
-        <com.google.android.material.tabs.TabLayout
-            android:id="@+id/requests_tab"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            app:tabMode="scrollable"
-            app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget">
-
-            <com.google.android.material.tabs.TabItem
-                android:id="@+id/all_tab"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:icon="@drawable/ic_all_requests" />
-
-            <com.google.android.material.tabs.TabItem
-                android:id="@+id/purchase_tab"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:icon="@drawable/ic_purchase" />
-
-            <com.google.android.material.tabs.TabItem
-                android:id="@+id/print_tab"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:icon="@drawable/ic_print" />
-
-            <com.google.android.material.tabs.TabItem
-                android:id="@+id/production_tab"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:icon="@drawable/ic_production" />
-
-            <com.google.android.material.tabs.TabItem
-                android:id="@+id/photography_tab"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:icon="@drawable/ic_photography" />
-
-            <com.google.android.material.tabs.TabItem
-                android:id="@+id/extras_tab"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:icon="@drawable/ic_wallet" />
-
-
-        </com.google.android.material.tabs.TabLayout>
-
-        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-            android:id="@+id/swipe_refresh"
+        <ImageView
+            android:id="@+id/filter_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp">
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="5dp"
+            android:background="@drawable/black_curved"
+            android:contentDescription="@string/description"
+            android:padding="10dp"
+            android:src="@drawable/ic_filter" />
+    </RelativeLayout>
+
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/requests_tab"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        app:tabMode="scrollable"
+        app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget">
+
+        <com.google.android.material.tabs.TabItem
+            android:id="@+id/all_tab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:icon="@drawable/ic_all_requests" />
+
+        <com.google.android.material.tabs.TabItem
+            android:id="@+id/purchase_tab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:icon="@drawable/ic_purchase" />
+
+        <com.google.android.material.tabs.TabItem
+            android:id="@+id/print_tab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:icon="@drawable/ic_print" />
+
+        <com.google.android.material.tabs.TabItem
+            android:id="@+id/production_tab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:icon="@drawable/ic_production" />
+
+        <com.google.android.material.tabs.TabItem
+            android:id="@+id/photography_tab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:icon="@drawable/ic_photography" />
+
+        <com.google.android.material.tabs.TabItem
+            android:id="@+id/extras_tab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:icon="@drawable/ic_wallet" />
 
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recycler_view"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                tools:listitem="@layout/item_request" />
-        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+    </com.google.android.material.tabs.TabLayout>
+
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_refresh"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp">
 
 
-    </LinearLayout>
-</RelativeLayout>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:listitem="@layout/item_request" />
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+</LinearLayout>
