--- a/app/src/main/res/layout/fragment_extras_view.xml
+++ b/app/src/main/res/layout/fragment_extras_view.xml
@@ -7,7 +7,8 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        tools:ignore="UselessParent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -43,7 +44,7 @@
                 android:layout_height="1dp"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
-                android:background="@color/line_gray"/>
+                android:background="@color/line_gray" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -75,7 +76,7 @@
                 android:layout_height="1dp"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
-                android:background="@color/line_gray"/>
+                android:background="@color/line_gray" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -107,7 +108,7 @@
                 android:layout_height="1dp"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
-                android:background="@color/line_gray"/>
+                android:background="@color/line_gray" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -139,8 +140,7 @@
                 android:layout_height="1dp"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
-                android:background="@color/line_gray"/>
-
+                android:background="@color/line_gray" />
 
 
             <LinearLayout
