--- a/app/src/main/res/layout/fragment_photography_supplier_cost_view.xml
+++ b/app/src/main/res/layout/fragment_photography_supplier_cost_view.xml
@@ -8,7 +8,8 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        tools:ignore="UselessParent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -206,7 +207,8 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    tools:ignore="UseCompoundDrawables">
 
                     <ImageView
                         android:id="@+id/nagat_reject"
@@ -214,7 +216,8 @@
                         android:layout_height="wrap_content"
                         android:adjustViewBounds="true"
                         android:src="@drawable/ic_reject"
-                        app:tint="@color/red" />
+                        app:tint="@color/red"
+                        android:contentDescription="@string/description" />
 
                     <TextView
                         android:layout_width="match_parent"
@@ -229,7 +232,8 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    tools:ignore="UseCompoundDrawables">
 
                     <ImageView
                         android:id="@+id/nagat_approve"
@@ -237,7 +241,8 @@
                         android:layout_height="wrap_content"
                         android:adjustViewBounds="true"
                         android:src="@drawable/ic_approve"
-                        app:tint="@color/green" />
+                        app:tint="@color/green"
+                        android:contentDescription="@string/description" />
 
                     <TextView
                         android:layout_width="match_parent"
