--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -6,9 +6,8 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical"
-    android:paddingStart="15dp"
+    android:paddingHorizontal="15dp"
     android:paddingTop="15dp"
-    android:paddingEnd="15dp"
     tools:context=".home.profile.ProfileFragment">
 
     <TextView
@@ -52,7 +51,6 @@
             android:layout_marginTop="5dp"
             android:background="@drawable/et_gray_border"
             android:importantForAutofill="no"
-            android:inputType="text"
             android:padding="10dp"
             android:textColor="@color/black"
             android:textSize="18sp"
@@ -79,7 +77,6 @@
             android:layout_marginTop="5dp"
             android:background="@drawable/et_gray_border"
             android:importantForAutofill="no"
-            android:inputType="textEmailAddress"
             android:padding="10dp"
             android:textColor="@color/black"
             android:textSize="18sp"
@@ -91,12 +88,12 @@
         android:id="@+id/btn_change_pass"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
         android:layout_marginHorizontal="10dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/et_gray"
         android:baselineAligned="false"
-        android:textAllCaps="false"
         android:text="@string/change_password"
+        android:textAllCaps="false"
         android:textColor="@color/black" />
 
 
@@ -104,12 +101,12 @@
         android:id="@+id/btn_log_out"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
         android:layout_marginHorizontal="10dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/et_gray"
         android:baselineAligned="false"
-        android:textAllCaps="false"
         android:text="@string/log_out"
+        android:textAllCaps="false"
         android:textColor="@color/black" />
 
 </LinearLayout>
