--- a/app/src/main/res/layout/fragment_projects.xml
+++ b/app/src/main/res/layout/fragment_projects.xml
@@ -46,6 +46,7 @@
                 android:drawableTint="@color/black"
                 android:hint="@string/type_to_search"
                 android:imeOptions="actionSearch"
+                android:importantForAutofill="no"
                 android:inputType="text"
                 android:padding="8dp" />
 
@@ -57,6 +58,7 @@
                 android:layout_centerVertical="true"
                 android:layout_marginStart="5dp"
                 android:background="@drawable/black_curved"
+                android:contentDescription="@string/description"
                 android:padding="10dp"
                 android:src="@drawable/ic_filter" />
         </RelativeLayout>
