--- a/app/src/main/res/layout/item_attaches.xml
+++ b/app/src/main/res/layout/item_attaches.xml
@@ -7,9 +7,9 @@
     <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="5dp"
         android:background="@color/notification_list_item_bg"
         app:cardCornerRadius="5dp"
-        android:layout_margin="5dp"
         app:cardElevation="2.5dp">
 
         <LinearLayout
@@ -17,14 +17,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@color/notification_list_item_bg"
-            android:orientation="vertical"
             android:gravity="center"
+            android:orientation="vertical"
             android:padding="5dp">
 
             <ImageView
                 android:layout_width="40dp"
                 android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
+                android:contentDescription="@string/description"
                 android:src="@drawable/ic_attach"
                 app:tint="@color/gray" />
 
@@ -32,7 +33,7 @@
                 android:id="@+id/attach_no"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/test_text"/>
+                android:text="@string/test_text" />
 
 
         </LinearLayout>
