--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -1,91 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/parent_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingBottom="5dp">
+    android:orientation="vertical"
+    android:padding="5dp">
 
+    <RelativeLayout
+        android:id="@+id/topSpan"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <com.github.siyamed.shapeimageview.RoundedImageView
+            android:id="@+id/img_profile"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/ic_profile"
+            app:siBorderColor="@color/white"
+            app:siBorderWidth="0dp"
+            app:siRadius="25dp"
+            app:siSquare="true" />
+
+        <TextView
+            android:id="@+id/user_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="10dp"
+            android:layout_toStartOf="@+id/date"
+            android:layout_toEndOf="@id/img_profile"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            tools:text="Ahmed Adel" />
+
+        <TextView
+            android:id="@+id/date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="10dp"
+            android:textColor="@color/light_gray"
+            android:textSize="14sp"
+            tools:text="17/6/1992" />
+
+
+    </RelativeLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="50dp"
+        android:background="@color/comment_bg"
         android:orientation="vertical"
-        android:padding="5dp">
+        android:padding="10dp">
 
-        <RelativeLayout
-            android:id="@+id/topSpan"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <com.github.siyamed.shapeimageview.RoundedImageView
-                android:id="@+id/img_profile"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:src="@drawable/ic_profile"
-                app:siBorderColor="@color/white"
-                app:siBorderWidth="0dp"
-                app:siRadius="25dp"
-                app:siSquare="true" />
-
-            <TextView
-                android:id="@+id/user_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginStart="10dp"
-                android:layout_toEndOf="@id/img_profile"
-                android:textColor="@color/black"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                tools:text="Ahmed Adel" />
-
-            <TextView
-                android:id="@+id/date"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
-                android:layout_marginEnd="10dp"
-                android:textColor="@color/light_gray"
-                android:textSize="14sp"
-                tools:text="17/6/1992" />
-
-
-        </RelativeLayout>
-
-        <LinearLayout
+        <TextView
+            android:id="@+id/comment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="50dp"
-            android:background="@color/comment_bg"
-            android:orientation="vertical"
-            android:padding="10dp">
+            android:ellipsize="end"
+            android:textColor="@color/gray"
+            android:textSize="16sp"
+            tools:text="data data datat data datat datat datdatadtada" />
 
-            <TextView
-                android:id="@+id/comment"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:textColor="@color/gray"
-                android:textSize="16sp"
-                tools:text="data data datat data datat datat datdatadtada" />
-
-            <TextView
-                android:id="@+id/attachment"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:ellipsize="end"
-                android:textColor="@color/text_dark_blue"
-                android:textSize="14sp"
-                android:visibility="gone"
-                android:text="Attachment" />
-
-        </LinearLayout>
-
+        <TextView
+            android:id="@+id/attachment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:ellipsize="end"
+            android:text="@string/attachment"
+            android:textColor="@color/text_dark_blue"
+            android:textSize="14sp"
+            android:visibility="gone" />
 
     </LinearLayout>
 
-</RelativeLayout>
+</LinearLayout>
