--- a/app/src/main/res/layout/item_edit_job_order_request.xml
+++ b/app/src/main/res/layout/item_edit_job_order_request.xml
@@ -32,10 +32,10 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:layout_toStartOf="@+id/delete"
                         android:layout_centerVertical="true"
-                        android:layout_marginEnd="10dp">
+                        android:layout_marginEnd="10dp"
+                        android:layout_toStartOf="@+id/delete"
+                        android:orientation="horizontal">
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -59,18 +59,20 @@
                         android:id="@+id/delete"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/ic_delete"
-                        android:padding="5dp"
                         android:layout_alignParentEnd="true"
+                        android:contentDescription="@string/description"
+                        android:padding="5dp"
+                        android:src="@drawable/ic_delete"
                         app:tint="@color/red" />
 
                 </RelativeLayout>
 
 
-                <RelativeLayout
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp">
+                    android:layout_marginTop="5dp"
+                    android:orientation="horizontal">
 
                     <LinearLayout
                         android:id="@+id/final_cost_container"
@@ -123,7 +125,7 @@
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentEnd="true"
+                        android:layout_marginStart="10dp"
                         android:gravity="center_vertical"
                         android:orientation="horizontal"
                         android:visibility="visible">
@@ -168,11 +170,10 @@
                         </androidx.cardview.widget.CardView>
 
                     </LinearLayout>
-                </RelativeLayout>
 
+                </LinearLayout>
 
             </LinearLayout>
-
 
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
